--- a/src/locales/en.yml
+++ b/src/locales/en.yml
@@ -7,3 +7,10 @@ login:
   passwordIsNotEmptyRule: The password can not be empty
   passwordLengthRule: Length should be 6 to 18
   success: Login Success
+settings:
+  title: 'Page style setting'
+  theme: 'Theme Color'
+  showTagsView: 'Open Tags-View'
+  showSidebarLogo: 'Sidebar Logo'
+  fixedHeader: 'Fixed Header'
+  sidebarTextTheme: 'Sidebar Text Theme'
