--- a/src/locales/zh-CN.yml
+++ b/src/locales/zh-CN.yml
@@ -7,16 +7,33 @@ login:
   passwordIsNotEmptyRule: 密码不能为空
   passwordLengthRule: 长度应该在 6 到 18 之间
 settings:
-  title: '系统布局配置'
-  theme: '主题色'
-  showTagsView: '显示 Tags-View'
-  showSidebarLogo: '显示侧边栏 Logo'
-  fixedHeader: '固定 Header'
-  sidebarTextTheme: '侧边栏文字主题色'
+  title: 系统布局配置
+  theme: 主题色
+  showTagsView: 显示 Tags-View
+  showSidebarLogo: 显示侧边栏 Logo
+  fixedHeader: 固定 Header
+  sidebarTextTheme: 侧边栏文字主题色
 navbar:
-  dashboard: '首页'
-  github: '项目地址'
-  logout: '退出登录'
+  dashboard: 首页
+  github: 项目地址
+  logout: 退出登录
 message:
   loginSuccess: 登陆成功
   logoutSuccess: 退出成功
+route:
+  dashboard: 仪表盘
+  posts: 博文
+  posts-view: 管理
+  posts-edit: 撰写
+  posts-category: 分类 / 标签
+  comments: 评论
+  projects: 项目
+  projects-list: 项目列表
+  projects-edit: 创建项目
+  friends: 朋友们
+  permission: 权限管理
+tagsView:
+  refresh: 刷新
+  close: 关闭
+  close-others: 关闭其他
+  close-all: 全部关闭
